[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "minesweeper-neural-network"
version = "0.1.0"
description = "A DDQN-friendly Minesweeper environment with a playable Pygame UI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pygame-ce",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
